--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.21.x' ]
+        go-version: [ '1.23.x' ]
         os: [ windows, linux, darwin ]
         arch: [ amd64, arm64 ]
         exclude:
@@ -25,6 +25,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
+
+      - name: Initialize Go module
+        run: go mod init github.com/yourusername/remotec
 
       - name: Get version from code
         id: version
