--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,7 +25,6 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
 
-      # 关键修改：删除 go mod init，改为直接运行 go mod tidy
       - name: Install dependencies
         run: go mod tidy
 
@@ -58,6 +57,6 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: binaries
+          name: remotec-binaries-${{ matrix.os }}-${{ matrix.arch }}  # 唯一名称
           path: dist/
           if-no-files-found: error
