--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,6 +25,15 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
 
+      # 🔥 新增缓存步骤（放在 `go mod tidy` 之前）
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Install dependencies
         run: go mod tidy
 
