项目无第三方依赖，禁用缓存

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -24,15 +24,16 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
+          cache: false  # 禁用 setup-go 的自动缓存
 
-      # 🔥 新增缓存步骤（放在 `go mod tidy` 之前）
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+#      # 🔥 新增缓存步骤（放在 `go mod tidy` 之前）
+#      - name: Cache Go modules
+#        uses: actions/cache@v4
+#        with:
+#          path: ~/go/pkg/mod
+#          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+#          restore-keys: |
+#            ${{ runner.os }}-go-
 
       - name: Install dependencies
         run: go mod tidy
