--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -15,9 +15,9 @@ jobs:
         go-version: [ '1.23.x' ]
         os: [ windows, linux, darwin ]
         arch: [ amd64, arm64 ]
-        exclude:
-          - os: darwin
-            arch: arm64
+#        exclude:
+#          - os: darwin
+#            arch: arm64
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
